force-app/main/default/objects/Strategy_Memo__c/fields/Underwriter_Medical__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriter - Medical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>