force-app/main/default/objects/Strategy_Memo__c/fields/Underwriter_Optum_Rx__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Optum_Rx__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriter - Optum Rx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>