force-app/main/default/objects/Strategy_Memo__c/fields/Underwriter_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Specialty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriter - Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>