force-app/main/default/objects/Strategy_Memo__c/fields/Unique_Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Unique_Business_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Business Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>