force-app/main/default/objects/Strategy_Memo__c/fields/Vendor_Integration_File_Feeds__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Integration_File_Feeds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor partners/ integration/ file feeds</label>
    <type>TextArea</type>
</CustomField>