force-app/main/default/objects/Strategy_Memo__c/fields/Vendor_Integration_Needs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Integration_Needs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Integration Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>