force-app/main/default/objects/Strategy_Memo__c/fields/Vs_Blues_Alt__c.field-meta.xml
<CustomField>
    <fullName>Vs_Blues_Alt__c</fullName>
    <label>Vs Blues Alt</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>