force-app/main/default/objects/Strategy_Memo__c/fields/Vs_Cigna__c.field-meta.xml
<CustomField>
    <fullName>Vs_Cigna__c</fullName>
    <label>Vs Cigna</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>