force-app/main/default/objects/Strategy_Memo__c/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Website URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>