force-app/main/default/objects/Strategy_Memo__c/fields/Wellness_Credit__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>