force-app/main/default/objects/Strategy_Memo__c/fields/What_EMTs_will_be_Submitted__c.field-meta.xml
<CustomField>
    <fullName>What_EMTs_will_be_Submitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What EMTs will be submitted?</label>
    <type>TextArea</type>
</CustomField>