force-app/main/default/objects/Strategy_Memo__c/fields/X2nd_MD_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>X2nd_MD_Sales_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd MD Sales Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>