force-app/main/default/objects/Strategy_Memo__c/fields/Years_Fees_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Years_Fees_to_Quote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Years Fees to Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>