force-app/main/default/objects/Strategy_Memo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>